syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

option go_package = "generated-go/v1";

service GreeterService {
  rpc Hello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/v2/hello/{name}"
    };
  }
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string answer = 1;
}